test/parser/valid/modifiers/restricted_static_native_int_m_int.java
  public class A {
    public A() {}
    public static native int m(int i);
  }

