test/parser/bad/_custom/multiple_public_classes.java

public class multiple_public_classes {
  public multiple_public_classes() {}
}

public class A {
  public A() {}
}

public class B {
  public B() {}
}
